statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mystatefulset
  namespace: project-namespace
spec:
  selector:
    matchLabels:
      app: myappdb
  serviceName: my-servicedb
  replicas: 1
  template:
    metadata:
      labels:
        app: myappdb
    spec:
      containers:
      - name: myappdb
        image: shaikmustafa/phpapp:dbimage

        ports:
        - containerPort: 3306 
          name: mysqlcontainer

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"

        volumeMounts:
        - name: mysql-data
          mountPath: /usr/share/nginx/html

  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes:  
        - ReadWriteOnce
      storageClassName: gp2
      
      resources:
        requests:
          storage: 2Gi
