app_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: project-namespace
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
