db_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: myappdb
  namespace: project-namespace
spec:
  selector:
    app: myappdb
  ports:
  - port: 3306
    targetPort: 3306
