networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
  namespace: project-namespace
spec:
  podSelector:
    matchingLabels:
      app: my-app

  policyTypes:
  - Ingress
  - Egress  

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80

  egress:
  - to: 
    - podSelector:
        matchLabels:
          app: myappdb
        
    ports:
    - protocol: TCP
      port: 3306

  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
